--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ header {
 body {
     max-width: 960px;
     margin: auto;
-    background-color: #ffffff;
+    background-color: tan;
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
@@ -47,7 +47,7 @@ ul {
 
 /* Body */
 .container {
-    background-color: #f30e0e;
+    background-color: #ffffff;
     border-color: #dddddd;
     margin-top: 40px;
     margin-bottom: 90px;
@@ -70,5 +70,5 @@ h2 {
     color: white;
     text-align: center;
     padding-top: 20px;
-
+    font-size: 10px;
 }
