--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,8 @@ header {
 }
 
 body {
-    max-width: 960px;
     margin: auto;
-    background-color: tan;
+    background-image: url('../images/dust_scratches.png');
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
@@ -38,6 +37,8 @@ h1 {
 
 .nav li {
     display: inline-block;
+    padding-right: 15px;
+    color: #777777
 }
 
 ul {
@@ -45,20 +46,28 @@ ul {
     margin-bottom: 0px;
 }
 
-/* Body */
+/* About Body */
 .container {
+    margin: 0 auto;
+    max-width: 960px;
     background-color: #ffffff;
     border-color: #dddddd;
     margin-top: 40px;
     margin-bottom: 90px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
 }
 
 .profile-pic {
     padding-right: 20px;
+    padding-top: 10px;
 }
 
 h2 {
     margin-bottom: 0px;
+    color: #4aaaa5;
 }
 
 /* Footer */
@@ -71,4 +80,5 @@ h2 {
     text-align: center;
     padding-top: 20px;
     font-size: 10px;
+    padding-bottom: 1px;
 }
