--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@ h1 {
     align-items: center;
     justify-content: space-between;
     display: flex;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 .nav li {
@@ -48,6 +50,7 @@ ul li:hover {
 ul {
     list-style-type: none;
     margin-bottom: 0px;
+    font-size: 20px;
 }
 
 /* About Body */
