--- a/css/style.css
+++ b/css/style.css
@@ -156,4 +156,9 @@ textarea {
     padding-top: 20px;
     font-size: 10px;
     padding-bottom: 1px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
 }
