Footer fixed to bottom again

--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ textarea {
 
 /* Footer */
 footer {
-    position: absolute;
+    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
